[metadata]
name = elliptec
version = 0.2.1
author = Bob Peterson
author_email = bob@rwp.is
description = Python interface to Thorlabs Elliptec motorized mounts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.sr.ht/~rwp/elliptec
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Education
    Intended Audience :: Science/Research

[options]
packages = find:
python_requires = >=3.6
install_requires =
    tomli ~= 2.0.0